--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ MAIL_FROM="Mira Shop <noreply@example.com>"
 # Supabase (server)
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
+CORS_ORIGIN=http://localhost:5173
