--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "dev:full": "concurrently \"npm:server:dev\" \"vite\"",
     "build:server": "tsc -p server/tsconfig.json",
     "start": "node server/dist/index.js",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.55.0",
+    "compression": "^1.8.1",
     "cors": "2.8.5",
     "express": "4.19.2",
+    "express-rate-limit": "^8.0.1",
     "framer-motion": "^12.23.12",
+    "helmet": "^8.1.0",
     "lucide-react": "^0.462.0",
     "nodemailer": "^7.0.5",
     "react": "^18.2.0",
@@ -56,7 +60,9 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "husky": "^9.1.7",
     "jsdom": "^25.0.0",
+    "lint-staged": "^16.1.5",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
@@ -65,5 +71,11 @@
     "vite": "^5.4.2",
     "vite-plugin-pwa": "^0.20.0",
     "vitest": "^2.0.5"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
