--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build:server": "tsc -p server/tsconfig.json",
     "start": "node server/dist/index.js",
     "typecheck": "tsc -b",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev:nf": "netlify dev",
+    "deploy:nf": "netlify deploy --build --prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -40,6 +42,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@netlify/functions": "^4.2.1",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
@@ -63,6 +66,7 @@
     "husky": "^9.1.7",
     "jsdom": "^25.0.0",
     "lint-staged": "^16.1.5",
+    "netlify-cli": "^23.1.3",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
