--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ SMTP_HOST=
 SMTP_PORT=587
 SMTP_USER=
 SMTP_PASS=
-MAIL_FROM="Mira Shop <noreply@example.com>"
+MAIL_FROM="Your Name <orders@yourdomain.tld>"
 
 # Supabase (server)
 SUPABASE_URL=
