--- a/netlify.toml
+++ b/netlify.toml
@@ -43,3 +43,6 @@
   from = "/api/webhook/stripe"
   to = "/.netlify/functions/webhook-stripe"
   status = 200
+
+[build.environment]
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_URL,VITE_SUPABASE_ANON_KEY,MAIL_FROM"
