--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,5 @@ MAIL_FROM="Your Name <orders@yourdomain.tld>"
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 CORS_ORIGIN=http://localhost:5173
+VITE_CURRENCY=EUR
+VITE_LOCALE=de-DE
