--- a/netlify.toml
+++ b/netlify.toml
@@ -15,19 +15,19 @@
   to   = "/index.html"
   status = 200
 
-# Статика на год (иммутабельно)
+# Статика на год
 [[headers]]
   for = "/assets/*"
   [headers.values]
   Cache-Control = "public, max-age=31536000, immutable"
 
-# SW не кешируем агрессивно
+# SW — без кэша
 [[headers]]
   for = "/sw.js"
   [headers.values]
   Cache-Control = "no-cache"
 
-# Базовые защищающие заголовки + CSP под Stripe/Supabase
+# Безопасные заголовки + более либеральный CSP для запуска
 [[headers]]
   for = "/*"
   [headers.values]
@@ -35,17 +35,16 @@
   X-Content-Type-Options = "nosniff"
   Referrer-Policy = "strict-origin-when-cross-origin"
   Permissions-Policy = "camera=(), microphone=(), geolocation=()"
-  # NB: если добавишь внешние домены (чат/аналитика) — дополни connect-src/script-src/frame-src
   Content-Security-Policy = """
   default-src 'self';
   base-uri 'self';
   object-src 'none';
-  script-src 'self' https://js.stripe.com https://checkout.stripe.com;
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://checkout.stripe.com blob:;
   style-src 'self' 'unsafe-inline';
   img-src 'self' data: blob: https:;
   font-src 'self' data:;
-  connect-src 'self' https://*.supabase.co https://api.stripe.com https://checkout.stripe.com;
+  connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.stripe.com https://checkout.stripe.com;
   frame-src https://js.stripe.com https://checkout.stripe.com;
-  worker-src 'self';
+  worker-src 'self' blob:;
   form-action 'self' https://checkout.stripe.com;
   """
