modified:   .env.example 	modified:   .gitignore 	modified:   netlify.toml 	modified:   package.json 	new file:   scripts/check-supabase.mjs 	new file:   scripts/rest-diagnose.mjs 	modified:   src/admin/AdminLayout.tsx 	modified:   src/admin/Categories.tsx 	modified:   src/admin/Orders.tsx 	modified:   src/admin/Products.tsx 	modified:   src/admin/Reviews.tsx 	new file:   src/admin/Settings.tsx 	modified:   src/components/CatalogMega.tsx 	modified:   src/lib/categories.ts 	new file:   src/lib/csv.ts 	modified:   src/lib/supabase.ts 	modified:   src/main.tsx 	modified:   src/router.tsx 	modified:   vite.config.ts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm:server:dev\" \"vite --port 5173 --strictPort\"",
+    "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
@@ -12,7 +12,6 @@
     "test": "vitest --ui",
     "test:run": "vitest run",
     "sitemap": "node scripts/gen-sitemap.mjs",
-    "server:dev": "tsx server/index.ts",
     "dev:full": "concurrently \"npm:server:dev\" \"vite\"",
     "build:server": "tsc -p server/tsconfig.json",
     "start": "node server/dist/index.js",
@@ -20,7 +19,9 @@
     "prepare": "husky install",
     "dev:nf": "netlify dev",
     "deploy:nf": "netlify deploy --build --prod",
-    "build:ci": "npm run typecheck && vite build"
+    "build:ci": "npm run typecheck && vite build",
+    "dev:vite": "vite",
+    "dev:nl": "netlify dev -c \"vite --port 5173\""
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
