--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,13 @@
   publish  = "dist"
   functions = "netlify/functions"
 
+  [build.environment]
+    NODE_VERSION = "18"
+
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["nodemailer"]
   included_files = ["server/**"]
-  node_version = "18"
 
 [[redirects]]
   from = "/*"
@@ -31,16 +33,4 @@
   X-Content-Type-Options = "nosniff"
   Referrer-Policy = "strict-origin-when-cross-origin"
   Permissions-Policy = "camera=(), microphone=(), geolocation=()"
-  Content-Security-Policy = """
-  default-src 'self';
-  base-uri 'self';
-  object-src 'none';
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://checkout.stripe.com blob:;
-  style-src 'self' 'unsafe-inline';
-  img-src 'self' data: blob: https:;
-  font-src 'self' data:;
-  connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.stripe.com https://checkout.stripe.com;
-  frame-src https://js.stripe.com https://checkout.stripe.com;
-  worker-src 'self' blob:;
-  form-action 'self' https://checkout.stripe.com;
-  """
+  Content-Security-Policy = "default-src 'self'; base-uri 'self'; object-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://checkout.stripe.com blob:; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https:; font-src 'self' data:; connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.stripe.com https://checkout.stripe.com; frame-src https://js.stripe.com https://checkout.stripe.com; worker-src 'self' blob:; form-action 'self' https://checkout.stripe.com;"
